--- a/cerberus_bringup/config/cerberus.yaml
+++ b/cerberus_bringup/config/cerberus.yaml
@@ -86,15 +86,8 @@ joint_trajectory_controller:
       - position
 
     state_interfaces:
-      - position
+      - effort
       - velocity
 
-    state_publish_rate: 200.0 # Defaults to 50
-    action_monitor_rate: 200.0 # Defaults to 20
-
-    allow_partial_joints_goal: False # Defaults to false
-    open_loop_control: false
-    allow_integration_in_goal_trajectories: true
-    constraints:
-      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
-      goal_time: 0.0 # Defaults to 0.0 (start immediately)
+    state_publish_rate: 50.0 # Defaults to 50
+    action_monitor_rate: 50.0 # Defaults to 20
